# turtlebotpath

./: .gitignore
install/: local_setup.sh  setup.sh
install/turtlebot4_cpp/lib/turtlebot4_cpp/: turtlebot4_cpp_node
install/turtlebot4_cpp/share/ament_index/resource_index/package_run_dependencies/: turtlebot4_cpp
install/turtlebot4_cpp/share/ament_index/resource_index/parent_prefix_path/: turtlebot4_cpp
install/turtlebot4_cpp/share/turtlebot4_cpp/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/turtlebot4_py/lib/turtlebot4_py/: turtlebot4_py_node
install/turtlebot4_py/share/turtlebot4_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/turtlebot4_cpp/share/turtlebot4_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
src/turtlebot4_cpp/: CMakeLists.txt  package.xml
src/turtlebot4_cpp/log/: latest_build
src/turtlebot4_cpp/src/: Vector3.cpp  Vector3.hpp  turtlebot4_cpp_node.cpp  turtlebot4_drive_node.cpp  turtlebot4_goal_node.cpp  turtlebot4_main_node.cpp  turtlebot4_rotate_node.cpp
src/turtlebot4_py/: setup.cfg  setup.py
src/turtlebot4_py/turtlebot4_py/: turtlebot4_py_node.py
turtlebot4_node_interfaces/: CMakeLists.txt  package.xml
turtlebot4_node_interfaces/srv/: Drive.srv  Rotate.srv
turtlebot4_ui/: package.xml  setup.cfg  setup.py
turtlebot4_ui/log/: latest_build
turtlebot4_ui/turtlebot4_ui/: colour_reduce.py  svg_processing.py  turtlebot4_ui_node.py
